fix: align ingredients section of adobo page

--- a/css/chicken_adobo.css
+++ b/css/chicken_adobo.css
@@ -88,3 +88,18 @@ p.descText {
     text-align: center;
 }
 
+.ingredientSection {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+}
+
+h2.ingredientsTitle {
+    text-align: center;
+}
+
+ul.ingredientsList {
+    -webkit-columns: 2;
+    margin-right: 28px;
+    width: 500px;
+}
